<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Magic 8 Ball</string>
    <string name="str_author">Created by: Raj Ramsaroop</string>
    <string name="str_instructions">Ask a question, then shake your device to get an answer&#8230;</string>
    <string name="str_btn_start">Start</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_credits">Uses code from Android Cookbook (Orielly) || sound from oringz.com. || Speech files from yakitome.com</string>
    <string-array name="responses">
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response1">My reply is no</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response2">Yes definitely</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response3">Don\'t count on it</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response4">Very doubtful</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response5">Most likely</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response6">As I see it, yes</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response7">Yes</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response8">Concentrate and ask again</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response9">Outlook not so good</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response10">You may rely on it</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response11">It is decidedly so</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response12">Reply hazy try again</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response13">Without a doubt</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response14">Cannot predict now</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response15">It is certain</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response16">Outlook good</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response17">Signs point to yes</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response18">Ask again later</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response19">Better not tell you now</item>
        <item android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/response20">My sources say no</item>
    </string-array>

</resources>
