<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.bewareofraj.magic8ball.SplashScreenActivity" >

    <TextView
        android:id="@+id/lblAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/str_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAppName"
        android:layout_alignRight="@+id/lblAppName"
        android:layout_below="@+id/lblInstructions"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:text="@string/str_btn_start" />

    <TextView
        android:id="@+id/lblCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/str_credits"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000" />

    <TextView
        android:id="@+id/lblAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/str_author"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textColorHint="#000000" />

</RelativeLayout>
